<?xml version="1.0"?>
<package format="2">
  <name>stm_interface</name>
  <version>0.1.0</version>
  <description>The stm_interface package</description>

  <maintainer email="vibi@todo.todo">vibi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend> 

  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
